@@ -199,7 +199,7 @@ class lmbWebAppTools extends lmbAbstractTools
         $this->toolkit->getFlashBox()->addMessage($message);
     }
 
-    /** @throw lmbControllerNotFoundException */
+    /** @throws lmbControllerNotFoundException */
     function createController($controller_name, $namespace = '')
     {
         if (strrpos($controller_name, 'Controller') == 0)
